<resources>
    <string name="app_name">TrashureHunt</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="create_a_profile">Create a Profile</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="start_sign_in_activity">Start Sign in activity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="profile">profile</string>
    <string name="community">community</string>
    <string name="map">map</string>
    <string name="trash_location_reported">number of location reported</string>
    <string name="trash_location_cleared">number of location cleared</string>
    <string name="reported_photo">reported photo</string>
    <string name="This_place_is_now_clean">clean me</string>
    <string name="user_profile">user_profile</string>
    <string name="user_badge">user_badge</string>
    <string name="background_layout">background_layout</string>
    <string name="sign_out">Sign Out</string>
    <string name="menu">menu</string>
    <string name="average">Average</string>
    <string name="you">You</string>
    <string name="reported">Reported</string>
    <string name="cleared">Cleared</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="interested">interested</string>
    <string name="going">going</string>

</resources>
