<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profilePhotoView"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/user_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText"
        app:srcCompat="@drawable/download" />

    <ImageView
        android:id="@+id/badgeView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignStart="@+id/profilePhotoView"
        android:layout_alignTop="@+id/profilePhotoView"
        android:contentDescription="@string/user_badge"
        app:layout_constraintBottom_toBottomOf="@+id/profilePhotoView"
        app:layout_constraintEnd_toEndOf="@+id/profilePhotoView"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="User Name" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:alpha="0.3"
        android:background="@color/colorPrimaryLight"
        android:contentDescription="@string/background_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhotoView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"

        android:layout_marginEnd="16dp"

        android:background="@drawable/style_button"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/style_button"
        android:text="@string/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/averageActivityText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/average"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yourActivityText"
        app:layout_constraintTop_toTopOf="@+id/yourActivityText" />

    <TextView
        android:id="@+id/yourActivityText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/you"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/averageActivityText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/userReportedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/yourActivityText"
        app:layout_constraintStart_toStartOf="@+id/yourActivityText"
        app:layout_constraintTop_toBottomOf="@+id/yourActivityText"
        tools:text="100" />

    <TextView
        android:id="@+id/averageReportedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/averageActivityText"
        app:layout_constraintStart_toStartOf="@+id/averageActivityText"
        app:layout_constraintTop_toTopOf="@+id/userReportedText"
        tools:text="200" />

    <TextView
        android:id="@+id/reportUserTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reported"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="@+id/userReportedText"
        app:layout_constraintStart_toStartOf="@+id/userReportedText"
        app:layout_constraintTop_toBottomOf="@+id/userReportedText" />

    <TextView
        android:id="@+id/reportAverageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reported"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/averageReportedText"
        app:layout_constraintStart_toStartOf="@+id/averageReportedText"
        app:layout_constraintTop_toBottomOf="@+id/averageReportedText" />

    <TextView
        android:id="@+id/userClearedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/reportUserTitleText"
        app:layout_constraintStart_toStartOf="@+id/reportUserTitleText"
        app:layout_constraintTop_toBottomOf="@+id/reportUserTitleText"
        tools:text="80" />

    <TextView
        android:id="@+id/averageClearedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/reportAverageTitle"
        app:layout_constraintStart_toStartOf="@+id/reportAverageTitle"
        app:layout_constraintTop_toBottomOf="@+id/reportAverageTitle"
        tools:text="100" />

    <TextView
        android:id="@+id/clearedUserTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cleared"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="@+id/userClearedText"
        app:layout_constraintStart_toStartOf="@+id/userClearedText"
        app:layout_constraintTop_toBottomOf="@+id/userClearedText" />

    <TextView
        android:id="@+id/clearedAverageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cleared"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/averageClearedText"
        app:layout_constraintStart_toStartOf="@+id/averageClearedText"
        app:layout_constraintTop_toBottomOf="@+id/averageClearedText" />

</android.support.constraint.ConstraintLayout>