<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:tabIndicatorHeight="3dp">

            <android.support.design.widget.TabItem
                android:id="@+id/mapTab"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/map" />

            <android.support.design.widget.TabItem
                android:id="@+id/communityTab"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/community" />

            <android.support.design.widget.TabItem
                android:id="@+id/profileTab"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/profile" />
        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:foregroundGravity="right"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

    </android.support.v4.view.ViewPager>
</android.support.constraint.ConstraintLayout>