<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profilePhoto"
            android:layout_width="101dp"
            android:layout_height="101dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/userNameField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/download" />

        <EditText
            android:id="@+id/userNameField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            app:layout_constraintBottom_toTopOf="@+id/passwordField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePhoto"
            tools:text="User Name" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/confirmPasswordField"
            app:layout_constraintEnd_toEndOf="@+id/userNameField"
            app:layout_constraintStart_toStartOf="@+id/userNameField"
            app:layout_constraintTop_toBottomOf="@+id/userNameField"
            tools:text="Password" />

        <EditText
            android:id="@+id/confirmPasswordField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/emailField"
            app:layout_constraintEnd_toEndOf="@+id/passwordField"
            app:layout_constraintStart_toStartOf="@+id/passwordField"
            app:layout_constraintTop_toBottomOf="@+id/passwordField"
            tools:text="Confirm Password" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/confirmPasswordField"
            app:layout_constraintStart_toStartOf="@+id/confirmPasswordField"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordField"
            tools:text="email@mail.com" />

        <Button
            android:id="@+id/saveButton"

            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="6dp"
            android:background="@drawable/style_button"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintTop_toTopOf="@+id/cancelButton" />

        <Button
            android:id="@+id/cancelButton"

            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/style_button"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailField" /><![CDATA[
            app:layout_constraintTop_toTopOf="@+id/saveButton" />


        ]]>
    </android.support.constraint.ConstraintLayout>


</ScrollView>